# luxsin-tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  Home.py  Makefile  README.md  docker-compose.yml  luxsin.html  main.py  pyproject.toml  requirements.txt
.githooks/: post-commit
.streamlit/: secrets.toml.example
app/: main.py
app/chat/: api.py  constants.py  crud.py  models.py  schemas.py  services.py
app/core/: anthropic.py  config.py  database.py  exceptions.py  jinja2.py  logger.py  middlewares.py  redis.py
app/luxsin/: client.py  constants.py  schemas.py  utils.py
app/modules/autoeq/: client.py
docs/: 软件著作权说明书.md
luxsin/: client.py  constants.py  crypto.py  luxsin.py  utils.py
pages/: 01_Control.py  ai.py  chat.py  control.py
scripts/: deploy.sh
static/css/: chat.css
static/js/: chat.js  device.js  device.updatePeq.test.js
templates/: chat.jinja
