[project]
name = "luxsin-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.91.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "sqlmodel>=0.0.38",
    "streamlit>=1.56.0",
]
